openshift-spring-workshop.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: openshift-spring-workshop
  labels:
    app: openshift-spring-workshop-application
    type: spring-boot
    env: int
spec:
  replicas: 1
  selector:
    app: openshift-spring-workshop
    deploymentconfig: openshift-spring-workshop
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: openshift-spring-workshop
        deploymentconfig: openshift-spring-workshop
    spec:
      containers:
        - name: openshift-spring-workshop
          resources:
            limits:
              memory: 1G
              cpu: 800m
            requests:
              memory: 1G
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9031
              scheme: HTTP
            initialDelaySeconds: 45
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9031
              scheme: HTTP
            initialDelaySeconds: 45
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          image: openshift-spring-workshop
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 9031
              protocol: TCP
          volumeMounts:
            - mountPath: /app/application-int.yml
              name: openshift-spring-workshop-application-file
              readOnly: true
              subPath: application-int.yml
            - mountPath: /deployments/logs/
              name: syslog
      volumes:
        - configMap:
            optional: false
            name: openshift-spring-workshop-application
          name: openshift-spring-workshop-application-file
        - name: syslog
          emptyDir: {}
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - openshift-spring-workshop
        from:
          kind: ImageStreamTag
          name: openshift-spring-workshop:latest

---
apiVersion: v1
kind: Service
metadata:
  labels:
    env: int
    app: openshift-spring-workshop
  name: openshift-spring-workshop
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 9031-tcp
      port: 9031
      protocol: TCP
      targetPort: 9031
  selector:
    deploymentconfig: openshift-spring-workshop

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openshift-spring-workshop
  labels:
    env: int
spec:
  port:
    targetPort: 9031-tcp
  to:
    kind: Service
    name: openshift-spring-workshop
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
